# GDD

./: .env.example  .gitignore  .replit  MIGRACION_FASE1.md  PRONACA.txt  README  REPORTES\SERVER\Madrugada\REVICION_MADRUGADA2023-10-24  ad.txt  asd.txt  beta.py  config.ini  dat  main.py  pyproject.toml  replit.md  requeriment.txt  requeriments.txt  requirements.txt  s.drawio  setup.py  vos.py
Config/: config.py
MODULOS/Modelo/: FtpXsales.py
MODULOS/Vista/Interface_CLI/: VistaCLI.py
MODULOS/Vista/Interface_Web/: index.py
MODULOS/Vista/Interface_Web/static/js/: modal.js
MODULOS/Vista/Interface_Web/templates/: index.html
config/: server_preferences.yml
core/: __init__.py  app.py  config_manager.py  di_container.py  plugin_context.py  plugin_registry.py  util.py
core/Interfaces/: Iplugins.py  __init__.py  plugin.py
core/config/: __init__.py  preferences_manager.py  queries_manager.py
core/domain/: __init__.py  exceptions.py  preferences.py  query_result.py
core/exepcions/: exception.py
core/models/: __init__.py  preferences.py  query.py  result.py
core/repositories/: __init__.py
core/services/: __init__.py
core/ui/: __init__.py  list_presenter.py  summary_presenter.py  table_presenter.py
core/wizard/: __init__.py  preference_wizard.py  query_wizard.py
default/: defult.py
docs/: xsales-objects-diagram.md
entorno/: pyvenv.cfg
entorno/Scripts/: activate  activate.bat  activate.fish  activate.xsh  pygmentize-script.py  tqdm-script.py
plugins/: .gitignore
plugins/Nuo/: tickest.py
plugins/bzhelp/: Bzhelp.py
plugins/xsales/: Xsales.py  __init__.py  confi.py  config.py  config.yaml  config.yml  config.yml.new  inputquestion.py  plugin.py  revisar validar borrar.txt  util.py
plugins/xsales/src/: __init__.py  config.py  util.py
plugins/xsales/src/Services/: excel_services.py
plugins/xsales/src/modules/: __init__.py  base_module.py  config.py  module_registry.py
plugins/xsales/src/modules/FTP/: IFtp.py  __init__.py  config.py  config.yml  config.yml.new  ftp.py  ftp_module.py  iftp.py  sftp.py
plugins/xsales/src/modules/FTP/enums/: enumftp.py
plugins/xsales/src/modules/FTP/interface/: IFtp.py
plugins/xsales/src/modules/Server/: ##TODO.lua  __init__.py  config.py  config.yml  config.yml.new  di_container.py  server_module.py  server_module_legacy.py
plugins/xsales/src/modules/Server/Pagedriver/: xsalesbeta.py
plugins/xsales/src/modules/Server/User/: Consultas.py  __init__.py  config.py  validador.py
plugins/xsales/src/modules/Server/domain/: __init__.py  query.py
plugins/xsales/src/modules/Server/enums/: horastockenvio.py  propertybase.py
plugins/xsales/src/modules/Server/infrastructure/: __init__.py  xsales_http_client.py
plugins/xsales/src/modules/Server/navigation/: __init__.py  navigation_controller.py
plugins/xsales/src/modules/Server/presenters/: __init__.py  console_presenter.py  excel_presenter.py
plugins/xsales/src/modules/Server/repositories/: __init__.py  xsales_query_executor.py  xsales_query_validator.py  yaml_query_repository.py
plugins/xsales/src/modules/Status/: Status.py  __init__.py  config.py  prueba.py  status_module.py
plugins/xsales/src/questions/: EJEMPLOS_USO.py  __init__.py  common_questions.py  question_builder.py
plugins/xsales/src/service/dbservice/: sqliteservices.py
plugins/xsales/src/service/excelservice/: service_excel.py
plugins/xsales/src/service/fileservice/: fileservice.py
test/: test_config.py  test_excelfile.py  test_ftp.py  test_question.py  test_validaor.py
tests/data/: EstadoRutas.json  Reporte_Pedidos.json  Reporte_RevisionesMatutinas.json  Untitled-1.json  dbdz.json  respuestaconsulta.json
tests/plugin/xsales/: test_config.py  test_question.py
(+15 files in other folders)
