[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "fake-useragent>=2.2.0",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyquery>=2.0.1",
    "pyyaml>=6.0.3",
    "pyyaml-include>=2.2",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "tqdm>=4.67.2",
    "xmltodict>=1.0.2",
]
